--- a/style.css
+++ b/style.css
@@ -16,15 +16,21 @@ body {
     margin: 0;
     padding-top: 60px;
 }
+
 .container {
-    margin-top: 70px;
+    width: calc(100% - 130px);
+    display: flex;
+    margin: 70px 65px;
+}
+
+.left-panel {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
     width: 100%;
 }
-textarea {
+.input-textarea {
     width: 100%;
     max-width: 700px;
     min-height: 250px;
